[gd_scene load_steps=40 format=2]

[ext_resource path="res://Assets/Enemies/AngryPig/Idle (36x30).png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemies/AngryPig/Run (36x30).png" type="Texture" id=2]
[ext_resource path="res://Enemies/Pig.gd" type="Script" id=3]
[ext_resource path="res://Hitbox and Hurtbox/Hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/HitEffect.gdshader" type="Shader" id=5]
[ext_resource path="res://Hitbox and Hurtbox/Hurtbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Enemies/AngryPig/Hit 1 (36x30).png" type="Texture" id=7]

[sub_resource type="ShaderMaterial" id=29]
shader = ExtResource( 5 )
shader_param/hit_opacity = 0.0

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 36, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 108, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 180, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 216, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 252, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 36, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 72, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 108, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 180, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 216, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 252, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 324, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 360, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 396, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 36, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 72, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 108, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 144, 0, 36, 30 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "Idle",
"speed": 15.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "Run",
"speed": 15.0
}, {
"frames": [ SubResource( 35 ) ],
"loop": true,
"name": "Death",
"speed": 5.0
}, {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": true,
"name": "Hit",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 10.5, 12 )

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 12, 10.5 )

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 10, 9 )

[node name="Pig" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 29 )
position = Vector2( 0, -15 )
frames = SubResource( 22 )
animation = "Idle"
frame = 8
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.5, -12 )
shape = SubResource( 23 )

[node name="LeftCheck" type="RayCast2D" parent="."]
position = Vector2( -9, -2.9 )
enabled = true
cast_to = Vector2( 0, 3 )

[node name="RightCheck" type="RayCast2D" parent="."]
position = Vector2( 10, -2.9 )
enabled = true
cast_to = Vector2( 0, 3 )

[node name="Hitbox" parent="." instance=ExtResource( 4 )]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0.5, -12 )
rotation = 1.5708
shape = SubResource( 24 )

[node name="Hurtbox" parent="." instance=ExtResource( 6 )]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -14 )
shape = SubResource( 25 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]

[editable path="Hitbox"]
[editable path="Hurtbox"]
